--- a/ppcriativos/css/style.scss
+++ b/ppcriativos/css/style.scss
@@ -159,7 +159,7 @@ nav#menu-site{
 
 div#intro{
 	width: 100%;
-	height: calc(100vh - 150px);
+	height: calc(100vh - 270px);
 	margin: 0;
 	padding: 0;
 	position: relative;
@@ -218,10 +218,10 @@ div#intro{
 		top: 50%;
 		left: 100px;
 		@include transform(translate(0,-50%));
-		width: 25%;
+		width: 30%;
 		height: auto;
 		h3{
-			padding-left: 7vw;
+			padding-left: 7.6vw;
 			font-family: $fonte-titulo;
 			font-weight: 200;
 			font-size: 1.3vw;
@@ -351,9 +351,7 @@ div#sobre{
 	width: 100%;
 	display: block;
 	margin-bottom: 100px;
-	& > div.flexbox{
-		display: flex;
-	}
+
 	div.texto{
 		display: block;
 		h2{
@@ -389,11 +387,55 @@ div#sobre{
 		}
 	}
 
-	div.bloco1{
-		width: 72%;
-		@media screen and (min-width: 1600px) {
-			width: 50%;
+
+	& > div.flexbox{
+		display: flex;
+		&.parte-um{
+			& > div.bloco1{
+				margin-right: 40px;
+				flex-grow: 1;
+				flex-basis: 75%;
+			}
+
+			& > div.info-pontual{
+				flex-basis: 25%;
+				padding: 30px;
+				background-color: $roxo-escuro;
+
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				& > div{
+					width: 100%;
+					display: flex;
+
+					svg{
+						flex-basis: 50px;
+						height: auto;
+						*{
+							fill: $laranja;
+						}
+						margin-right: 15px;
+					}
+					div{
+						flex-basis: auto;
+						h3{
+							font-size: 1.6em;
+						}
+						p{
+							color: $laranja-claro;
+						}
+					}
+					
+				}
+			}
+
 		}
+	}
+	
+
+	div.bloco1{
+		
 	}
 
 	div.bloco2{
@@ -402,33 +444,7 @@ div#sobre{
 	}
 
 	.info-pontual{
-		margin: 50px 0 80px;
-		width: 100%;
-		display: block;
-		padding: 40px 0 50px;
-		background-color: $roxo-escuro;
-		.pontuais{
-			display: flex;
-			justify-content: space-between;
-			& > div{
-				width: 33%;
-				text-align: center;
-				svg{
-					width: 20%;
-					height: auto;
-					*{
-						fill: $laranja;
-					}
-				}
-				h3{
-					font-size: 1.6em;
-				}
-				p{
-					color: $laranja-claro;
-				}
-			}
-
-		}
+		
 	}
 }
 
@@ -749,11 +765,11 @@ footer#contato{
 			margin-right: 30px;
 			h3{
 				font-size: 2em;
-				text-align: center;
+				text-align: left;
 			}
 			p{
 				color: $laranja-claro;
-				text-align: center;
+				text-align: left;
 				
 			}
 
