--- a/transasdocorpo-ciar/css/_galeria.scss
+++ b/transasdocorpo-ciar/css/_galeria.scss
@@ -42,7 +42,9 @@
 
 	a {
 		flex-basis: 14.2857142857%;
-		padding: 10px;
+		// padding: 10px;
+		font-size: 0;
+		display: block;
 
 		img {
 			width: 100%;
