--- a/transasdocorpo-ciar/css/style.css
+++ b/transasdocorpo-ciar/css/style.css
@@ -86,19 +86,58 @@ article {
   article p {
     margin: 20px 0; }
 
-.galeria {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start; }
-  .galeria a {
-    flex-basis: 14.2857142857%;
-    font-size: 0;
-    display: block; }
-    .galeria a img {
-      width: 100%;
-      height: auto; }
+div[class^="galeria-"] {
+  width: 100%; }
+  div[class^="galeria-"] .linha {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+    div[class^="galeria-"] .linha .galeria-item {
+      margin-top: 8px;
+      flex-grow: 1; }
+      div[class^="galeria-"] .linha .galeria-item .galeria-imagem {
+        width: 100%;
+        height: 0;
+        padding: 0 0 70%;
+        position: relative;
+        overflow: hidden; }
+        div[class^="galeria-"] .linha .galeria-item .galeria-imagem a {
+          width: 100%;
+          height: 100%;
+          display: block;
+          position: absolute; }
+          div[class^="galeria-"] .linha .galeria-item .galeria-imagem a img {
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+  div[class^="galeria-"].grid-1 .linha .galeria-item {
+    max-width: calc(100% - 6px); }
+  div[class^="galeria-"].grid-2 .linha .galeria-item {
+    max-width: calc(50% - 6px); }
+  div[class^="galeria-"].grid-3 .linha .galeria-item {
+    max-width: calc(33.33% - 6px); }
+  div[class^="galeria-"].grid-4 .linha .galeria-item {
+    max-width: calc(25% - 6px); }
+  div[class^="galeria-"].grid-5 .linha .galeria-item {
+    max-width: calc(20% - 6px); }
+  div[class^="galeria-"].grid-6 .linha .galeria-item {
+    max-width: calc(16.6666% - 6px); }
+  div[class^="galeria-"].grid-7 .linha .galeria-item {
+    max-width: calc(14.2857142857% - 6px); }
+  div[class^="galeria-"].grid-8 .linha .galeria-item {
+    max-width: calc(12.5% - 6px); }
+  div[class^="galeria-"].grid-9 .linha .galeria-item {
+    max-width: calc(11.1111111111% - 6px); }
 
 /*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
 .fancybox-wrap,
