--- a/transasdocorpo-ciar/css/style.css
+++ b/transasdocorpo-ciar/css/style.css
@@ -86,28 +86,46 @@ article {
   article p {
     margin: 20px 0; }
 
-div[class^="galeria-"] {
+div.galeria {
   width: 100%; }
-  div[class^="galeria-"] .linha {
+  div.galeria .linha {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between; }
-    div[class^="galeria-"] .linha .galeria-item {
+    div.galeria .linha.grid-1 .galeria-item {
+      max-width: calc(100% - 6px); }
+    div.galeria .linha.grid-2 .galeria-item {
+      max-width: calc(50% - 6px); }
+    div.galeria .linha.grid-3 .galeria-item {
+      max-width: calc(33.33% - 6px); }
+    div.galeria .linha.grid-4 .galeria-item {
+      max-width: calc(25% - 6px); }
+    div.galeria .linha.grid-5 .galeria-item {
+      max-width: calc(20% - 6px); }
+    div.galeria .linha.grid-6 .galeria-item {
+      max-width: calc(16.6666% - 6px); }
+    div.galeria .linha.grid-7 .galeria-item {
+      max-width: calc(14.2857142857% - 6px); }
+    div.galeria .linha.grid-8 .galeria-item {
+      max-width: calc(12.5% - 6px); }
+    div.galeria .linha.grid-9 .galeria-item {
+      max-width: calc(11.1111111111% - 6px); }
+    div.galeria .linha .galeria-item {
       margin-top: 8px;
       flex-grow: 1; }
-      div[class^="galeria-"] .linha .galeria-item .galeria-imagem {
+      div.galeria .linha .galeria-item .galeria-imagem {
         width: 100%;
         height: 0;
         padding: 0 0 70%;
         position: relative;
         overflow: hidden; }
-        div[class^="galeria-"] .linha .galeria-item .galeria-imagem a {
+        div.galeria .linha .galeria-item .galeria-imagem a {
           width: 100%;
           height: 100%;
           display: block;
           position: absolute; }
-          div[class^="galeria-"] .linha .galeria-item .galeria-imagem a img {
+          div.galeria .linha .galeria-item .galeria-imagem a img {
             min-width: 100%;
             min-height: 100%;
             width: auto;
@@ -120,23 +138,23 @@ div[class^="galeria-"] {
             -ms-transform: translate(-50%, -50%);
             -o-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
-  div[class^="galeria-"].grid-1 .linha .galeria-item {
+  div.galeria.grid-1 .galeria-item {
     max-width: calc(100% - 6px); }
-  div[class^="galeria-"].grid-2 .linha .galeria-item {
+  div.galeria.grid-2 .galeria-item {
     max-width: calc(50% - 6px); }
-  div[class^="galeria-"].grid-3 .linha .galeria-item {
+  div.galeria.grid-3 .galeria-item {
     max-width: calc(33.33% - 6px); }
-  div[class^="galeria-"].grid-4 .linha .galeria-item {
+  div.galeria.grid-4 .galeria-item {
     max-width: calc(25% - 6px); }
-  div[class^="galeria-"].grid-5 .linha .galeria-item {
+  div.galeria.grid-5 .galeria-item {
     max-width: calc(20% - 6px); }
-  div[class^="galeria-"].grid-6 .linha .galeria-item {
+  div.galeria.grid-6 .galeria-item {
     max-width: calc(16.6666% - 6px); }
-  div[class^="galeria-"].grid-7 .linha .galeria-item {
+  div.galeria.grid-7 .galeria-item {
     max-width: calc(14.2857142857% - 6px); }
-  div[class^="galeria-"].grid-8 .linha .galeria-item {
+  div.galeria.grid-8 .galeria-item {
     max-width: calc(12.5% - 6px); }
-  div[class^="galeria-"].grid-9 .linha .galeria-item {
+  div.galeria.grid-9 .galeria-item {
     max-width: calc(11.1111111111% - 6px); }
 
 /*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
