--- a/ppcriativos/css/style.css
+++ b/ppcriativos/css/style.css
@@ -80,7 +80,7 @@ div.posrel {
 
 div.container {
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 15px;
   display: block;
   width: 100%; }
   @media screen and (min-width: 1024px) {
@@ -124,23 +124,45 @@ nav#menu-site {
   left: 0;
   padding: 15px;
   z-index: 2; }
+  @media screen and (max-width: 768px) {
+    nav#menu-site {
+      width: 100%;
+      overflow: scroll;
+      background-color: #1a0023;
+      padding: 0px; } }
   nav#menu-site ul {
     padding: 0;
     position: relative; }
+    @media screen and (max-width: 768px) {
+      nav#menu-site ul {
+        white-space: nowrap; } }
     nav#menu-site ul li {
       display: inline-block;
       margin: 0 0.4vw;
       padding: 0.3vw 0.6vw;
       font-size: calc(7px + 0.7vw);
       font-family: "Raleway", Verdana, sans-serif; }
+      @media screen and (max-width: 768px) {
+        nav#menu-site ul li {
+          font-size: 15px;
+          margin: 0;
+          padding: 12px 18px; }
+          nav#menu-site ul li:first-child {
+            padding-left: 22px; } }
       nav#menu-site ul li a {
         color: #f68e2f;
         -webkit-transition: color 0.1s linear;
         -moz-transition: color 0.1s linear;
         transition: color 0.1s linear; }
-      nav#menu-site ul li:hover a {
-        cursor: pointer;
-        color: #ffd185; }
+      @media screen and (min-width: 768px) {
+        nav#menu-site ul li:hover a {
+          cursor: pointer;
+          color: #ffd185; } }
+      @media screen and (max-width: 768px) {
+        nav#menu-site ul li.secao-atual {
+          border-bottom: 3px solid #ffd185; }
+          nav#menu-site ul li.secao-atual a {
+            color: #ffd185; } }
       nav#menu-site ul li.especial {
         background-color: #f68e2f;
         -webkit-transition: background-color 0.1s linear;
@@ -159,6 +181,19 @@ nav#menu-site {
           transform: skew(15deg); }
           nav#menu-site ul li.especial div a {
             color: #31003e; }
+        @media screen and (max-width: 768px) {
+          nav#menu-site ul li.especial {
+            -webkit-transform: skew(0deg);
+            -moz-transform: skew(0deg);
+            -ms-transform: skew(0deg);
+            -o-transform: skew(0deg);
+            transform: skew(0deg); }
+            nav#menu-site ul li.especial div {
+              -webkit-transform: skew(0deg);
+              -moz-transform: skew(0deg);
+              -ms-transform: skew(0deg);
+              -o-transform: skew(0deg);
+              transform: skew(0deg); } }
         nav#menu-site ul li.especial:hover {
           background-color: #ffd185; }
   nav#menu-site.fixo {
@@ -186,6 +221,9 @@ nav#menu-site {
     -ms-transform: translateY(-100%);
     -o-transform: translateY(-100%);
     transform: translateY(-100%); }
+    @media screen and (max-width: 768px) {
+      nav#menu-site.fixo {
+        display: block; } }
     nav#menu-site.fixo.transition {
       -webkit-transition: -webkit-transform 0.2s ease-out;
       -moz-transition: -moz-transform 0.2s ease-out;
@@ -202,8 +240,7 @@ div#intro {
   height: calc(100vh - 250px);
   margin: 0;
   padding: 0;
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
   @media (max-width: 1024px) and (orientation: portrait) {
     div#intro {
       height: 500px; } }
@@ -348,7 +385,7 @@ div#intro {
           top: 91%; }
   div#intro div#logointro {
     position: absolute;
-    top: 50%;
+    top: calc(50% + 30px);
     left: 100px;
     -webkit-transform: translate(0, -50%);
     -moz-transform: translate(0, -50%);
@@ -357,6 +394,9 @@ div#intro {
     transform: translate(0, -50%);
     width: 30%;
     height: auto; }
+    @media (min-width: 1024px) and (max-height: 768px) {
+      div#intro div#logointro {
+        width: 25%; } }
     @media (max-width: 768px) and (orientation: portrait) {
       div#intro div#logointro {
         left: 50%;
@@ -431,7 +471,12 @@ div#noticias {
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-left: -10px; }
+    margin-left: -10px;
+    width: calc(100% + 10px); }
+    @media (max-width: 640px) {
+      div#noticias > div div.ultimasnoticias {
+        margin-left: 0;
+        width: auto; } }
     div#noticias > div div.ultimasnoticias div.noticia {
       width: calc(33.333333% - 20px);
       margin: 10px;
@@ -441,6 +486,11 @@ div#noticias {
       @media (max-width: 1024px) {
         div#noticias > div div.ultimasnoticias div.noticia {
           width: calc(50% - 20px); } }
+      @media (max-width: 640px) {
+        div#noticias > div div.ultimasnoticias div.noticia {
+          margin: 7px 0;
+          width: 100%;
+          padding: 20px 16px 40px; } }
       div#noticias > div div.ultimasnoticias div.noticia h4 {
         font-size: 1em;
         color: rgba(0, 0, 0, 0.6); }
@@ -452,6 +502,9 @@ div#noticias {
         margin-bottom: 20px; }
       div#noticias > div div.ultimasnoticias div.noticia p {
         color: black; }
+        @media screen and (max-width: 768px) {
+          div#noticias > div div.ultimasnoticias div.noticia p {
+            line-height: 1.4; } }
       div#noticias > div div.ultimasnoticias div.noticia a.saibamais {
         padding-bottom: 10px;
         padding-right: inherit;
@@ -697,7 +750,7 @@ div#equipe {
   padding-bottom: 200px; }
   @media screen and (max-width: 768px) {
     div#equipe {
-      padding-bottom: 100px; } }
+      padding-bottom: 60px; } }
   div#equipe h2 {
     font-size: 3.6em;
     font-weight: 600;
@@ -886,7 +939,6 @@ div#modais {
       width: 100%;
       height: 100%;
       opacity: 0;
-      z-index: 0;
       background-color: rgba(26, 0, 35, 0.9);
       -webkit-transition: opacity 0.2s linear;
       -moz-transition: opacity 0.2s linear;
@@ -898,13 +950,17 @@ div#modais {
       top: 0;
       right: 0;
       opacity: 0;
-      z-index: 1;
       margin: 5px 5px;
       width: 60px;
       height: 60px;
       -webkit-transition: opacity 0.2s linear;
       -moz-transition: opacity 0.2s linear;
       transition: opacity 0.2s linear; }
+      @media screen and (max-width: 1024px) {
+        div#modais div.flexbox div.fechar-modal {
+          width: 35px;
+          height: 35px;
+          margin: 10px; } }
       div#modais div.flexbox div.fechar-modal.visivel {
         opacity: 1; }
       div#modais div.flexbox div.fechar-modal div > div {
@@ -929,11 +985,14 @@ div#modais {
       div#modais div.flexbox div.fechar-modal:hover {
         cursor: pointer; }
     div#modais div.flexbox div.modais {
-      z-index: 3;
       overflow-y: scroll;
       display: none;
       margin: 50px 0;
       max-height: calc(100% - 100px); }
+      @media screen and (max-width: 1024px) {
+        div#modais div.flexbox div.modais {
+          margin: 45px 15px 15px;
+          max-height: calc(100% - 60px); } }
       div#modais div.flexbox div.modais.db {
         display: block; }
       div#modais div.flexbox div.modais > div {
@@ -965,6 +1024,12 @@ div#modais {
         div#modais div.flexbox div.modais.m-noticias > div {
           background-color: #fbf3fe;
           padding: 60px 100px 80px; }
+          @media screen and (max-width: 768px) {
+            div#modais div.flexbox div.modais.m-noticias > div {
+              padding: 30px 50px 40px; } }
+          @media screen and (max-width: 480px) {
+            div#modais div.flexbox div.modais.m-noticias > div {
+              padding: 15px 20px; } }
           div#modais div.flexbox div.modais.m-noticias > div h4 {
             font-size: 1em;
             color: rgba(0, 0, 0, 0.6); }
@@ -976,11 +1041,16 @@ div#modais {
             margin-bottom: 20px; }
           div#modais div.flexbox div.modais.m-noticias > div p, div#modais div.flexbox div.modais.m-noticias > div ol, div#modais div.flexbox div.modais.m-noticias > div ul, div#modais div.flexbox div.modais.m-noticias > div li {
             color: black; }
+            @media screen and (max-width: 768px) {
+              div#modais div.flexbox div.modais.m-noticias > div p, div#modais div.flexbox div.modais.m-noticias > div ol, div#modais div.flexbox div.modais.m-noticias > div ul, div#modais div.flexbox div.modais.m-noticias > div li {
+                line-height: 1.4; } }
           div#modais div.flexbox div.modais.m-noticias > div p {
-            margin-bottom: 15px; }
+            margin-bottom: 15px;
+            word-wrap: break-word; }
           div#modais div.flexbox div.modais.m-noticias > div a {
             color: #31003e;
-            font-weight: bold; }
+            font-weight: bold;
+            word-break: break-all; }
             div#modais div.flexbox div.modais.m-noticias > div a:hover {
               cursor: pointer;
               text-decoration: underline; }
@@ -995,12 +1065,18 @@ div#modais {
             width: calc( 100% - 40px );
             margin: 15px auto;
             height: auto; }
+            @media screen and (max-width: 768px) {
+              div#modais div.flexbox div.modais.m-noticias > div img {
+                width: 100%; } }
       div#modais div.flexbox div.modais.m-equipe {
         width: 960px; }
         div#modais div.flexbox div.modais.m-equipe > div {
           background-color: #31003e;
           padding: 30px 24px 42px;
           color: #f68e2f; }
+          @media screen and (max-width: 768px) {
+            div#modais div.flexbox div.modais.m-equipe > div {
+              padding: 20px 20px 30px; } }
           div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes {
             vertical-align: baseline;
             margin-bottom: 40px; }
@@ -1011,6 +1087,11 @@ div#modais {
               margin-right: 20px;
               display: inline-block;
               vertical-align: baseline; }
+              @media screen and (max-width: 768px) {
+                div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes h3 {
+                  display: block;
+                  margin-right: 0;
+                  margin-bottom: 10px; } }
             div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div {
               vertical-align: center;
               height: 100%;
@@ -1019,6 +1100,9 @@ div#modais {
               color: #f68e2f;
               display: inline-block;
               vertical-align: baseline; }
+              @media screen and (max-width: 768px) {
+                div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div {
+                  height: 30px; } }
               div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div a {
                 height: 100%;
                 vertical-align: middle; }
@@ -1029,15 +1113,32 @@ div#modais {
                   vertical-align: middle; }
                   div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div a svg path {
                     fill: #f68e2f; }
-          div#modais div.flexbox div.modais.m-equipe > div iframe.video_youtube {
+          div#modais div.flexbox div.modais.m-equipe > div div.video_youtube {
             position: relative;
             overflow: hidden;
             width: 450px;
-            height: 260px;
             display: inline-block;
             vertical-align: top;
             margin-right: 15px;
             float: left; }
+            div#modais div.flexbox div.modais.m-equipe > div div.video_youtube:before {
+              padding-top: 56.25%;
+              display: block;
+              content: "";
+              width: 100%; }
+            div#modais div.flexbox div.modais.m-equipe > div div.video_youtube > iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              margin: 0;
+              padding: 0; }
+            @media screen and (max-width: 768px) {
+              div#modais div.flexbox div.modais.m-equipe > div div.video_youtube {
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 15px; } }
           div#modais div.flexbox div.modais.m-equipe > div p {
             color: #f68e2f;
             vertical-align: top; }
@@ -1206,9 +1307,6 @@ footer#contato {
             width: 100%;
             height: auto; }
 
-@media (max-width: 980px) {
-  div#noticias > div div.ultimasnoticias div.noticia {
-    width: calc(50% - 20px); } }
 @media (max-width: 640px) {
   div#noticias > div div.ultimasnoticias div.noticia,
   div#sobre div.bloco1,
