--- a/transasdocorpo-ciar/style.css
+++ b/transasdocorpo-ciar/style.css
@@ -1,4 +1,4 @@
-/*Theme Name: Transas do Corpo
-Version: 1.0
+/*Theme Name: Transas do Corpo 2
+Version: 1.1
 Author: CIAR - UFG
 Author URI: https://www.ciar.ufg.br/*/
